lib_LTLIBRARIES = libSpline.la

#libSpline_la_SOURCES = banfac.f banslv.f bchfac.f bchslv.f bsplpp.f bsplvb.f bsplvd.f bspp2d.f bvalue.f chol1d.f colpnt.f cubspl.f \#
#						cwidth.f difequ.f eqblok.f interv.f knots.f ppvalu.f putit.f newnot.f colloc.f \
#						reinsch.f round.f setupq.f slvblktx.f smooth.f spli2d.f splint.f splopt.f tautsp.f titand.f csaps.f

libSpline_la_SOURCES = banfac.f  bsplvd.f  cubspl.f  factrb.f  l2knts.f  setupq.f  splopt.f \
banslv.f  bspp2d.f  cwidth.f  fcblok.f  newnot.f  shiftb.f  subbak.f \
bchfac.f  bvalue.f  difequ.f  interv.f  ppvalu.f  slvblk.f  subfor.f \
bchslv.f  chol1d.f  dtblok.f  knots.f   putit.f   smooth.f  tautsp.f \
bsplpp.f  colloc.f  eqblok.f  l2appr.f  round.f   spli2d.f  titand.f \
bsplvb.f  colpnt.f  evnnot.f  l2err.f   sbblok.f  splint.f csaps.f

libSpline_la_SOURCES += DeBoor.C
# l2appr.f l2err.f l2knts.f l2main.f newnotfk.f

libSpline_la_CPPFLAGS = -I$(top_srcdir)/include
#libSpline_la_LDFLAGS =  -rdynamic -version-info $(LT_CURRENT) $(GTKDATABOX_LIBS) #-release $(LT_RELEASE) $(FFTW3_LIBS)

#libfoo_la_LIBADD   = $(FLIBS)
